# droplet_evap_model

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yml
configs/: config.yml  gas.csv  log.yml
src/dropletevapmodel/: __init__.py  _utils.py  model.py  phy_utils.py  post_process.py  template_readme.md
src/dropletevapmodel/models/: phy_model.py
src/package_template/: __init__.py  _utils.py  _version.py
src/package_template/queries/: template_readme.md
tests/: test_dummy.py  test_model.py
tests/assets/: config.yml  config_nok.yml  gas.csv  gas_nok.csv  liq.csv  liq_nok.csv
tutorial/: main.py  tutorial.py
